<resources>
    <string name="app_name">OnlineStore</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_profile">Profile</string>
    <string name="shared_pref_name">User data preferences</string>
    <string name="search_label">Search</string>
    <string name="all">All</string>
    <string name="recently_watched">Recently watched</string>
    <string name="on_sale">On Sale</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="subtotal">Subtotal:</string>
    <string name="delivery_fee">Delivery fee(free from 700₽):</string>
    <string name="free">Free</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="you_have_n_items">"You have %1d items"</string>
    <string name="delete_all">Delete all</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_time">Delivery Date &amp; Time</string>
    <string name="products">Products</string>
    <string name="apply_coupon">Apply coupon</string>
    <string name="coupon">Coupon:</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="Password">Password</string>
    <string name="enter_email_or_phone_number">Please enter your email or phone number</string>
    <string name="enter_email_and_phone_number">Please enter your email and phone number</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="password">Password</string>
    <string name="country">Country:</string>
    <string name="brand">Brand:</string>
    <string name="left_on_stock">Remain in stock:</string>
    <string name="contact_info">Contact info</string>
    <string name="street_house_num">Street and house number</string>
    <string name="address">Address</string>
    <string name="apartament_number">Apartament number</string>
    <string name="make_default">Make default</string>
    <string name="save">Save</string>
    <string name="entrance">Entrance</string>
    <string name="floor">Floor</string>
    <string name="edit_address">Edit address</string>
    <string name="select_date">Select date:</string>
    <string name="select_time">Select time:</string>
    <string name="select_delivery_time">Select delivery time</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="payment_method_balance">Balance %1s</string>
    <string name="confirm_pay">Confirm &amp; pay</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="order_in_total">Order in total</string>
    <string name="payment">Payment</string>
    <string name="choose_address">Choose address</string>
    <string name="default_address_type">Home</string>
    <string name="orders">Orders</string>
    <string name="placed">Placed</string>
    <string name="preparing">Preparing</string>
    <string name="on_the_way">On the way</string>
    <string name="delivered">Delivered</string>
    <string name="view_all">View all</string>
    <string name="coupons">Coupons</string>
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="new_password">New password</string>
    <string name="orders_count">%1d orders</string>
    <string name="placed_date">Placed:</string>
    <string name="items_count">%1d items</string>
    <string name="order_again">Order again</string>
    <string name="order_num">Order #%1d | %2s</string>
    <string name="delivery">Delivery:</string>
    <string name="set_address">Set address</string>
    <string name="filter_by">Filter by</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps_to_make_it">Steps to make it</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="recipes">Recipes</string>
    <string name="recipe">Recipe</string>
</resources>