<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/navigation_categories"
        android:enabled="true"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_categories"/>
    <item
        android:id="@+id/navigation_recipes"
        android:enabled="true"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_cart"/>
    <item
        android:id="@+id/navigation_cart"
        android:enabled="true"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_recipes"/>
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_profile" />
</menu>